--- a/MeetupXamarin.Android/Resources/layout/Events.axml
+++ b/MeetupXamarin.Android/Resources/layout/Events.axml
@@ -6,8 +6,15 @@
     <include
         android:id="@+id/support_toolbar"
         layout="@layout/toolbar" />
+  <android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/events_layout"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ListView
         android:id="@+id/eventsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+  </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
