--- a/MeetupXamarin.Android/Resources/layout/Groups.axml
+++ b/MeetupXamarin.Android/Resources/layout/Groups.axml
@@ -9,8 +9,15 @@
         layout="@layout/toolbar"
         title="Meetup"
         android:layout_width="match_parent" />
+  <android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/groups_layout"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <ListView
-        android:id="@+id/groupsList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+      android:id="@+id/groupsList"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" />  
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
