--- a/MeetupXamarin.Android/Resources/layout/Groups.axml
+++ b/MeetupXamarin.Android/Resources/layout/Groups.axml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,15 +8,14 @@
         layout="@layout/toolbar"
         title="Meetup"
         android:layout_width="match_parent" />
-  <android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/groups_layout"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ListView
-      android:id="@+id/groupsList"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent" />  
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/groups_layout"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/groupsList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
