--- a/MeetupXamarin.Android/Resources/layout/memberlist_item.axml
+++ b/MeetupXamarin.Android/Resources/layout/memberlist_item.axml
@@ -36,5 +36,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:layout_marginTop="15dp"
-        android:buttonTint="@color/primary" />
+        android:buttonTint="@color/primary"
+        />
 </RelativeLayout>
